Fixed a small spacing issue in the task card.

--- a/styles.css
+++ b/styles.css
@@ -52,28 +52,29 @@ textarea {
 /* TASK CARD START */
 .card {
     border: 1px solid deeppink;
-    border-radius: 5px;
+    border-radius: 2px;
     background-color: rgb(255, 223, 230);
     color: rgb(69, 13, 42);
     margin: 40px;
     width: 300px;
+    height: auto;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     box-shadow: inset 8px 8px 0px pink;
+    padding: 15px;
 }
 
 .card-body {
-    padding: 15px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     height: 100%;
 }
 
 .card-title {
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .badge {
